# TianCapability

./: .gitignore  README.md  deploy.sh  migrate_runtime_data_to_mysql.py  pyproject.toml
app/: __init__.py  main.py
app/capabilities/: __init__.py
app/capabilities/capture_idea/: README.md  __init__.py  handler.py  manifest.yaml
app/capabilities/get_agriculture_knowledge/: README.md  __init__.py  handler.py  knowledge_client.py  manifest.yaml
app/capabilities/get_volleyball_match_list/: README.md  __init__.py  handler.py  manifest.yaml  match_list.py
app/capabilities/get_weather/: README.md  __init__.py  city_codes.py  handler.py  manifest.yaml  weather_source.py
app/capabilities/manage_birthday/: README.md  __init__.py  handler.py  manifest.yaml
app/capabilities/manage_todo/: README.md  handler.py  manifest.yaml
app/capabilities/search_news/: __init__.py  handler.py  manifest.yaml  search_client.py
app/capabilities/set_reminder/: README.md  handler.py  (+1 more)
app/registry/: __init__.py  loader.py
app/schemas/: __init__.py  common.py  progress.py
app/services/: __init__.py  batch_execution.py  birthday_service.py  env_config.py  idea_service.py  lunar_calendar.py  progress_writer.py  reminder_dispatch_service.py  reminder_service.py  time_utils.py  todo_service.py
app/workers/: reminder_worker.py
docs/: README_CAPABILITY_DEVELOPMENT.md  README_REMINDER_NOTIFICATION_API.md  README_SKILL_DEVELOPMENT.md
tests/: test_capture_idea.py  test_get_weather_weather_source.py  test_manage_birthday.py  test_manage_todo.py  test_search_news.py  test_set_reminder.py
(+20 files in other folders)
