[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capability-service"
version = "0.1.0"
description = "Standalone capability execution service for TianAI runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5.0",
  "fastapi>=0.115,<1.0",
  "jsonschema>=4.23,<5.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "requests>=2.32,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

